<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:gravity="center"
    tools:context=".MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:scaleType="fitXY"
            android:layout_marginBottom="50dp"
            android:src="@drawable/note"/>


    </LinearLayout>

    <Button
        android:id="@+id/addButton"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_button"
        android:textStyle="bold"
        android:textColor="@color/button_text_color"
        android:onClick="click"
        android:text="@string/add_new_note" />

    <Button
        android:id="@+id/notesButton"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_button"
        android:textStyle="bold"
        android:textColor="@color/button_text_color"
        android:text="@string/my_note"
        android:onClick="click"/>

    <Button
        android:id="@+id/exitButton"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:textStyle="bold"
        android:textColor="@color/button_text_color"
        android:text="@string/exit"
        android:onClick="click"/>
</LinearLayout>