<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddNew">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/save_button"
            android:layout_marginTop="8dp"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/add_note"
            android:layout_below="@+id/add_note"
            android:background="@drawable/round_button"
            android:textStyle="bold"
            android:textColor="@color/button_text_color"
            android:text="@string/save" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">
    <EditText
        android:id="@+id/add_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:maxLines="1"
        android:singleLine="true"
        android:hint="@string/title" />

    <EditText
        android:id="@+id/add_note"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:gravity="top"
        android:ems="10"
        android:background="#DBD9D1"
        android:inputType="textMultiLine"
        android:hint="@string/enter_note"/>

    </LinearLayout>

</LinearLayout>